[package]
name = "butterup"
description = "Backup btrfs snapshots over SSH"
version = "1.1.1"
authors = ["Joakim Hulthe <joakim@hulthe.net>"]
license = "MPL-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0.44"
chrono = "0.4.19"
log = "0.4"
pretty_env_logger = "0.4"

[dependencies.clap]
version = "3.1.0"
features = ["derive", "cargo"]

[dependencies.ssh2]
version = "0.9.1"
features = ["vendored-openssl"]
